# kiutils

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  kicadutils_poc.py  requirements_dev.txt  setup.cfg  setup.py  test.py
.github/workflows/: python  python-publish.yml  python-test.yml
docs/: basics.rst  conf.py  development.rst  index.rst  installation.rst  known-issues.rst
docs/module/: kiutils.items.rst  kiutils.misc.rst  kiutils.rst  kiutils.utils.rst
docs/usage/: development.rst  examples.rst  getting-started.rst  installation.rst
kiutils/: board.py  footprint.py  libraries.py  schematic.py  symbol.py
kiutils/items/: brditems.py  common.py  dimensions.py  fpitems.py  gritems.py  schitems.py  syitems.py  zones.py
kiutils/utils/: sexpr.py  strings.py
src/kiutils/: board.py  dru.py  footprint.py  libraries.py  schematic.py  symbol.py  wks.py
src/kiutils/items/: brditems.py  common.py  dimensions.py  fpitems.py  gritems.py  schitems.py  syitems.py  zones.py
src/kiutils/misc/: config.py
src/kiutils/utils/: sexpr.py  strings.py
tests/: __init__.py  board.py  designrules.py  footprint.py  fp-lib-table  libtable.py  schematic.py  symbol.py  template.py  test_arcs.kicad_pcb  test_board.py  test_designrules.py  test_dru_all.kicad_dru  test_footprint.py  test_fp_all.kicad_mod.expected  test_fp_empty_attr.kicad_mod  test_functions.py  test_libtable.py  test_misc.py  test_pcb_stackup_dielectrics_32layer_vias.kicad_pcb  test_schematic.py  test_sym_demorgan.kicad_sym  test_sym_demorgan_syitems.kicad_sym  test_symbol.py  test_template.py  test_wks_all.kicad_wks  test_worksheets.py  testcases.py  testfunctions.py  worksheets.py
tests/kicad-project/: hier_test.kicad_sch  sym-lib-table  test.kicad_pcb  test.kicad_pcb.expected  test.kicad_pro  test.kicad_sch  test.kicad_sch.expected
tests/kicad-project/Library.pretty/: test.kicad_mod
tests/reporter/: README.md  result.py
(+79 files in other folders)
