[metadata]
name = kiutils
version = 1.4.8
author = Marvin Mager
author_email = 99667992+mvnmgrx@users.noreply.github.com
description = Simple and SCM-friendly KiCad file parser for KiCad 6.0 and up
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mvnmgrx/kiutils
project_urls =
    Bug Tracker = https://github.com/mvnmgrx/kiutils/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
package_dir =
    = src
python_requires = >=3.7

[options.packages.find]
where = src
